# linkedin-content-automation

./: README.md  hooks.md  linkedin_posts.md  pyproject.toml
notebooks/: linkedin_automation_blog.ipynb  linkedin_automation_blog.md
src/linkedin/: crew.py  main.py
src/linkedin/config/: agents.yaml  tasks.yaml
