[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = "linkedin using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
linkedin = "linkedin.main:run"
run_crew = "linkedin.main:run"
train = "linkedin.main:train"
replay = "linkedin.main:replay"
test = "linkedin.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
